@@ -1,3 +1,9 @@
+2007-10-14  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in:
+	* capplets/common/gnome-theme-info.c (gnome_theme_init): query and
+	monitor the xcursor icon dir for cursor themes, too (bug #469882)
+
 2007-10-09  Bastien Nocera  <hadess@hadess.net>
 
 	* schemas/apps_gnome_settings_daemon_keybindings.schemas.in:
